--- a/views/pages/login.hbs
+++ b/views/pages/login.hbs
@@ -16,7 +16,7 @@
     </form> --}}
     <div class="container">
         <div class="signin-signup">
-            <form action="/search" method="POST" class="sign-in-form">
+            <form action="/search" method="POST" class="sign-in-form" style="text-transform: uppercase;">
                 <h2 class="title">Log in</h2>
                 <div class="input-field">
                     <i class="fas fa-user"></i>
