--- a/views/form/add_book.hbs
+++ b/views/form/add_book.hbs
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Insert Data</h1>
-  <form id="dataForm">
+  <form id="dataForm" style="text-transform: uppercase;">
     <label for="column2"> id:</label>
     <input type="text" id="column1" name="id" required><br><br>
 
