--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -13,7 +13,7 @@
   </head>
   <body class="container-fluid" style="--bs-gutter-x: 0;background:#200c33">
    
-    
+    {{> header}}
     {{{body}}}
      
   </body>
