--- a/views/pages/login.hbs
+++ b/views/pages/login.hbs
@@ -14,9 +14,10 @@
         <input type="password" id="age" name="age" required><br><br>
         <button type="submit">Login</button>
     </form> --}}
+    
     <div class="container">
         <div class="signin-signup">
-            <form action="/search" method="POST" class="sign-in-form" style="text-transform: uppercase;">
+            <form action="/search" method="POST" class="sign-in-form">
                 <h2 class="title">Log in</h2>
                 <div class="input-field">
                     <i class="fas fa-user"></i>
