--- a/views/pages/search.hbs
+++ b/views/pages/search.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+{{!-- <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 
     <a class="navbar-brand" href="javascript:void(0)">Logo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -58,7 +58,7 @@
       {{/if}}
     </div>
 
-</nav>
+</nav> --}}
 
 <main>
    <table class="container">
