--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,310 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+
+    <a class="navbar-brand" href="javascript:void(0)">Logo</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mynavbar">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="../search">Admin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../products">Add book</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../products/{{books.id}}">My books list</a>
+        </li>
+        
+         <li class="nav-item">
+          <a class="nav-link" href="../my_books">All books</a>
+        </li>
+      </ul>   
+      <form class="d-flex" action="/login" method="get">
+        <button class="btn btn-primary" type="submit">Log Out</button>
+      </form>
+      <form class="d-flex" action="/book/search" method="post">      
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal" style="margin: 0px 10px 0px 10px;">profile</button>
+      </form>
+      {{#if user}}
+      <div class="modal" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+      
+            <!-- Modal Header -->
+            <div class="modal-header">
+              <h4 class="modal-title">PROFILE</h4>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+      
+            <!-- Modal body -->
+            <div class="modal-body">
+                <label>name : {{user.name}} </label>
+                <br>
+                <label>age : {{user.age}} </label>
+                <br>
+                <label>mail : {{user.mail}} </label>
+            </div>
+      
+            <!-- Modal footer -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+            </div>
+      
+          </div>
+        </div>
+      </div>
+      {{/if}}
+    </div>
+
+</nav> --}}
+
+  <style media="screen">
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  font-family: 'Montserrat', sans-serif;
+}
+
+body{
+  background: linear-gradient(
+     105deg,
+     #88beee ,
+     #0a2e73
+ );
+}
+
+
+
+.registration_form{
+  
+  padding: 25px;
+  border-radius: 5px;
+  width: 700px;
+  
+}
+
+.registration_form .title{
+  text-align: center;
+  font-size: 25px;
+  text-transform: uppercase;
+  color: white;
+  background:rgb(13, 98, 215);
+  letter-spacing: 2px;
+  font-weight: 700;
+  margin-top: -25px;
+  margin-left:-25px;
+  margin-right:-25px;
+}
+
+.form_wrap{
+  margin-top: 35px;
+}
+
+.form_wrap .input_wrap{
+  margin-bottom: 15px;
+}
+
+.form_wrap .input_wrap:last-child{
+  margin-bottom: 0;
+}
+
+.form_wrap .input_wrap label{
+  display: block;
+  margin-bottom: 3px;
+  color: #ffffff;
+}
+
+.form_wrap .input_grp{
+  display: flex;
+  justify-content: space-between;
+}
+
+.form_wrap .input_grp  input[type="text"]{
+  width: 165px;
+}
+
+.form_wrap  input[type="text"]{
+  width: 100%;
+  border-radius: 3px;
+  border: 1.3px solid #9597a6;
+  padding: 10px;
+  outline: none;
+}
+
+.form_wrap  input[type="text"]:focus{
+  border-color: #363636;
+}
+
+.form_wrap ul{
+ border:1px solid rgba(115, 185, 235, 0.082);
+  width: 90%;
+  background: rgba(224, 11, 11, 0);
+  margin-left: 5%;
+  padding: 8px 10px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.form_wrap ul li:first-child{
+  margin-right: 15px;
+}
+
+.form_wrap ul .radio_wrap{
+  position: relative;
+  margin-bottom: 0;
+}
+
+.form_wrap ul .radio_wrap .input_radio{
+  position: absolute;
+  top: 0;
+  right: 0;
+  opacity: 0;
+}
+
+.form_wrap ul .radio_wrap span{
+  display: inline-block;
+  font-size: 17px;
+  padding: 3px 15px;
+  border-radius: 15px;
+  color: #b1b2bb;
+}
+
+.form_wrap .input_radio:checked ~ span{
+  background: #105ce2;
+  color:white;
+  transition: 0.5s;
+}
+
+.form_wrap .submit_btn{
+  width: 100%;
+  transition: 0.5s;
+  background: #0d6ad7;
+  padding: 10px;
+  border: 0;
+  color:white;
+  font-size:17px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  cursor: pointer;
+}
+
+.form_wrap .submit_btn:hover{
+  background: #051c94;
+  
+}
+.wrapper {
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+ 
+}
+
+.top-right-circle,
+.bottom-left-circle {
+  position: absolute;
+  width: 30rem;
+  height: 30rem;
+  filter: blur(8px);
+  /* Orange with transparency */
+  border-radius: 50%;
+  z-index: -1; /* Place behind other content */
+  
+}
+
+
+.top-right-circle {
+  top: -10rem; /* Adjust as needed */
+  right: 10rem; /* Adjust as needed */
+   background-color: rgb(255, 166, 0);
+    animation: anime 3s infinite;
+}
+@keyframes anime {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.bottom-left-circle {
+  bottom: 0rem; /* Adjust as needed */
+  left: 10rem; /* Adjust as needed */
+   background-color: rgb(255, 0, 149);
+   animation: anime2 3s infinite;
+}
+@keyframes anime2 {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-50px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+.enter
+{
+color:antiquewhite;
+background:#e008e7;
+padding:15px;
+letter-spacing: 2px;
+border-radius: 20px;
+text-decoration: none;
+text-shadow: 2px 2px 3px #1d1d1d;
+box-shadow: inset -2px -2px 20px 3px #720475;
+animation: blink 3s infinite;
+}
+@keyframes blink {
+  0% {
+   text-shadow: 2px 2px 3px #1d1d1d;
+   box-shadow: inset -2px -2px 20px 3px #720475;
+  }
+  25% {
+    text-shadow: 2px 2px 3px #bdbbbbc5;
+    box-shadow: inset 2px 2px 20px 3px #720475;
+  }
+  50% {
+    text-shadow: 2px 2px 3px #1d1d1d;
+    box-shadow: inset -2px -2px 20px 3px #720475;
+  }
+  75% {
+    text-shadow: 2px 2px 3px #bdbbbbc5;
+    box-shadow: inset 2px 2px 20px 3px #720475;
+  }
+  100% {
+   text-shadow: 2px 2px 3px #1d1d1d;
+   box-shadow: inset -2px -2px 20px 3px #720475;
+  }
+}
+  </style>
+
+<body>
+  <div class="wrapper">
+    <div class="registration_form" style="text-align: center;">
+     <div class="top-right-circle"></div>
+  <div class="bottom-left-circle"></div>
+
+    <img src="/images/books.png" style="width: 100%;">
+    <span style="height: 30px;display:block;width:20px"></span>
+    <a href="login" class="enter">welcome to logo here your site</a>
+   
+    {{!-- https://pngtree.com/freepng/purple-book-opens-spotlight-illumination-abstract-light-effect_6198480.html --}}
+    </div>
+  </div>
+</body>
+</html>
