--- a/views/pages/all_books.hbs
+++ b/views/pages/all_books.hbs
@@ -1,66 +1,4 @@
-{{!-- <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 
-  <a class="navbar-brand" href="javascript:void(0)">Logo</a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="mynavbar">
-    <ul class="navbar-nav me-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="../search">Admin</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../products">Add book</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../products/{{books.id}}">My books list</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="../my_books">All books</a>
-      </li>
-    </ul>
-    <form class="d-flex" action="/login" method="get">
-      <button class="btn btn-primary" type="submit">Log Out</button>
-    </form>
-    <form class="d-flex" action="/book/search" method="post">
-
-
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal"
-        style="margin: 0px 10px 0px 10px;">profile</button>
-    </form>
-    {{#if books}}
-    <div class="modal" id="myModal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-
-          <!-- Modal Header -->
-          <div class="modal-header">
-            <h4 class="modal-title">PROFILE</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-
-          <!-- Modal body -->
-          <div class="modal-body">
-            <label>name : {{this.name}} </label>
-            <br>
-            <label>age : {{this.age}} </label>
-            <br>
-            <label>mail : {{this.mail}} </label>
-          </div>
-
-          <!-- Modal footer -->
-          <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    {{/if}}
-  </div>
-
-</nav> --}}
 
 
 
@@ -71,7 +9,7 @@
 
 
   <ul class="book-list">
-    {{#each books}}
+    {{#each Books}}
     <li class="card col-sm-2">
       <h4 class="card-title">{{this.book_name}} <span style="color:#fff;background-color: #832323;padding:1px 8px;position:absolute;top:50px;right:10px;font-size:15px">{{this.student_id}}</span></h4>
       <form action="/products/{{this.book_name}}" method="post">
