--- a/views/pages/products.hbs
+++ b/views/pages/products.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+{{!-- <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 
     <a class="navbar-brand" href="javascript:void(0)">Logo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -57,7 +57,7 @@
       {{/if}}
     </div>
 
-</nav>
+</nav> --}}
 
   <style media="screen">
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
