delete_botton_style

--- a/views/pages/search.hbs
+++ b/views/pages/search.hbs
@@ -80,7 +80,7 @@
 			<td>{{this.mail}}</td>
       <td>
         <form action="/search/{{this.name}}" method="post">
-          <button type="submit" class="btn btn-primary">Delete</button>
+          <button type="submit" class="btn btn-primary" style="background-color: transparent;border:none;cursor:no-drop;">Delete</button>
         </form>
       </td>
 		</tr>
