--- a/views/index.hbs
+++ b/views/index.hbs
@@ -291,7 +291,13 @@ animation: blink 3s infinite;
    box-shadow: inset -2px -2px 20px 3px #720475;
   }
 }
-  </style>
+.enter a
+
+{
+  text-decoration: none;
+  color:antiquewhite;
+  font-size: 2rem;
+}  </style>
 
 <body>
   <div class="wrapper">
@@ -300,8 +306,8 @@ animation: blink 3s infinite;
   <div class="bottom-left-circle"></div>
 
     <img src="/images/books.png" style="width: 100%;">
-    <span style="height: 30px;display:block;width:20px"></span>
-    <a href="login" class="enter">welcome to logo here your site</a>
+    <span style="display:block" class="enter"></span>
+    <a href="login" >welcome to logo here your site</a>
    
     {{!-- https://pngtree.com/freepng/purple-book-opens-spotlight-illumination-abstract-light-effect_6198480.html --}}
     </div>
