--- a/views/index.hbs
+++ b/views/index.hbs
@@ -306,8 +306,10 @@ animation: blink 3s infinite;
   <div class="bottom-left-circle"></div>
 
     <img src="/images/books.png" style="width: 100%;">
-    <span style="display:block" class="enter"></span>
-    <a href="login" >welcome to logo here your site</a>
+    <span style="display:block" class="enter">
+      <a href="login" >welcome to logo here your site</a>
+    </span>
+    
    
     {{!-- https://pngtree.com/freepng/purple-book-opens-spotlight-illumination-abstract-light-effect_6198480.html --}}
     </div>
