--- a/views/index.hbs
+++ b/views/index.hbs
@@ -296,7 +296,7 @@ animation: blink 3s infinite;
 {
   text-decoration: none;
   color:antiquewhite;
-  font-size: 2rem;
+  font-size: 1.2rem;
 }  </style>
 
 <body>
@@ -306,7 +306,7 @@ animation: blink 3s infinite;
   <div class="bottom-left-circle"></div>
 
     <img src="/images/books.png" style="width: 100%;">
-    <span style="display:block" class="enter">
+    <span style="display:block;margin-top:2rem" class="enter">
       <a href="login" >welcome to logo here your site</a>
     </span>
     
