--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>OPSTAAN</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <meta charset="utf-8">
   
